测试使用html代码

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-欢迎来到Dream Passionately的个人主页！
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>主页</title>
+		 
+	</head>
+	<body>
+		<h1 align="center">欢迎来到-原来爱吃糖-的个人主页！</h1>
+		<div align="center"><img src="img/123.jpg"/></div>
+	</body>
+</html>
